[package]
name = "api-rest-rust"
version = "0.1.0"
authors = ["Fernando Lopez <lopezfer@globalhitss.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
serde = {version = "1.0.130", features = ["derive"]}
